@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Nov 2007; kiorky <kiorky@cryptelium.net>
+  maven-plugin-parameter-documenter-2.1_pre20070611.ebuild:
+  fix depend to use current plexus stuff
+
   11 Jun 2007; kiorky <kiorky@cryptelium.net>
   -maven-plugin-parameter-documenter-2.0.ebuild,
   +maven-plugin-parameter-documenter-2.1_pre20070611.ebuild:
